--- a/apps/docs/app/(docs)/components/badge/page.mdx
+++ b/apps/docs/app/(docs)/components/badge/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Badge
@@ -10,19 +10,19 @@ Use to emphasize a status, count, state or value.
 
 ### Usage
 
-<Demo component={demos["badge/usage"]} />
+<Demo component="badge/usage" />
 
 ### Appearance
 
 Use the `intent` and `variant` props to fine tune the appearance of the badge.
 
-<Demo component={demos["badge/appearance-usage"]} />
+<Demo component="badge/appearance-usage" />
 
 ### Badge as links
 
 Set `asChild` to `true` and wrap children in an `<a>` element to render badge as links.
 
-<Demo component={demos["badge/link-usage"]} />
+<Demo component="badge/link-usage" />
 
 ### Related
 
