--- a/apps/docs/app/(docs)/components/banner/page.mdx
+++ b/apps/docs/app/(docs)/components/banner/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Banner
@@ -10,19 +10,19 @@ Display a prominent message at the top of the screen.
 
 ### Usage
 
-<Demo component={demos["banner/usage"]} />
+<Demo component="banner/usage" />
 
 ### Appearance
 
 Use the `intent` prop to select between the different banner types.
 
-<Demo component={demos["banner/appearance-usage"]} />
+<Demo component="banner/appearance-usage" />
 
 ### Dismissible
 
 Use the `onDismiss` prop to show a close button to the top right of the banner.
 
-<Demo component={demos["banner/close-usage"]} />
+<Demo component="banner/close-usage" />
 
 ### Related
 
