--- a/apps/docs/app/(docs)/components/button/page.mdx
+++ b/apps/docs/app/(docs)/components/button/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Button
@@ -10,19 +10,19 @@ import { components, PropsTable } from "@/components/props-table";
 
 ### Usage
 
-<Demo component={demos["button/usage"]} />
+<Demo component="button/usage" />
 
 ### Appearance
 
 Use the `appearance` prop to select between the different button appearances.
 
-<Demo component={demos["button/appearance-usage"]} />
+<Demo component="button/appearance-usage" />
 
 ### Different sizes
 
 Use the `size` prop to modify the size of the button.
 
-<Demo component={demos["button/size-usage"]} />
+<Demo component="button/size-usage" />
 
 ### Disabled state
 
@@ -30,7 +30,7 @@ Set the `disabled` prop to `true` to disable buttons and prevent any interaction
 
 For accessibility please make sure to include text that explains why the button is disabled or use a tooltip.
 
-<Demo component={demos["button/disabled-usage"]} />
+<Demo component="button/disabled-usage" />
 
 ### Icons
 
@@ -40,7 +40,7 @@ Use the `icon` prop to add icons to a button.
 
 Icons are placed to the left by default but can be placed to the right using the `iconPosition` prop.
 
-<Demo component={demos["button/icon-usage"]} />
+<Demo component="button/icon-usage" />
 
 #### Icon only button
 
@@ -48,13 +48,13 @@ Use the `icon` prop and omit the `children` to display an icon only button.
 
 For accessibility please make sure to always include an `aria-label` prop for screen readers and optionally use tooltips to visually denote the button's intent.
 
-<Demo component={demos["button/icon-only-usage"]} />
+<Demo component="button/icon-only-usage" />
 
 ### Grouping buttons
 
 Use the `<ButtonGroup />` component to group related buttons together.
 
-<Demo component={demos["button/group-usage"]} />
+<Demo component="button/group-usage" />
 
 ### Links
 
@@ -62,7 +62,7 @@ Use the `<ButtonGroup />` component to group related buttons together.
 
 Set `asChild` to `true` and wrap children in an `<a>` element to render buttons as links.
 
-<Demo component={demos["button/link-usage"]} />
+<Demo component="button/link-usage" />
 
 #### Disabled button links
 
@@ -70,7 +70,7 @@ Make sure to prevent interactions manually using `event.preventDefault()` since 
 
 Alternatively you can use our `Link` component which supports the `disabled` prop.
 
-<Demo component={demos["button/link-disabled-usage"]} />
+<Demo component="button/link-disabled-usage" />
 
 ### Loading state
 
@@ -78,13 +78,13 @@ Set the `loading` prop to `true` to show a loading spinner and set `disabled` to
 
 For accessibility please make sure to include text that explains why the button is disabled or use a tooltip.
 
-<Demo component={demos["button/loading-usage"]} />
+<Demo component="button/loading-usage" />
 
 ### File upload
 
 We can create a simple file upload button by rendering the button as a `label` and including a visually hidden file input.
 
-<Demo component={demos["button/file-upload-usage"]} />
+<Demo component="button/file-upload-usage" />
 
 ### Related
 
