--- a/apps/docs/app/(docs)/components/calendar/page.mdx
+++ b/apps/docs/app/(docs)/components/calendar/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Calendar
@@ -9,7 +9,7 @@ Base date picker component.
 
 ### Usage
 
-<Demo component={demos["calendar/usage"]} />
+<Demo component="calendar/usage" />
 
 ## Props
 
