--- a/apps/docs/app/(docs)/components/checkbox/page.mdx
+++ b/apps/docs/app/(docs)/components/checkbox/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Checkbox
@@ -10,37 +10,37 @@ Basic control to allow selecting one or more items from a set.
 
 ### Usage
 
-<Demo component={demos["checkbox/usage"]} />
+<Demo component="checkbox/usage" />
 
 ### Label
 
 The `children` prop is used as the label of the checkbox control.
 
-<Demo component={demos["checkbox/label-usage"]} />
+<Demo component="checkbox/label-usage" />
 
 ### Disabled state
 
 Enable the `disabled` prop to toggle the disabled state of the checkbox control.
 
-<Demo component={demos["checkbox/disabled-usage"]} />
+<Demo component="checkbox/disabled-usage" />
 
 ### Controlled
 
 Use the `checked` and `defaultChecked` props to toggle between controlled and uncontrolled usage. And combine it with `onCheckedChange` to listen for changes to the state.
 
-<Demo component={demos["checkbox/controlled-usage"]} />
+<Demo component="checkbox/controlled-usage" />
 
 ### Indeterminate
 
 Enable the `indeterminate` prop to toggle the indeterminate state of the checkbox control.
 
-<Demo component={demos["checkbox/indeterminate-usage"]} />
+<Demo component="checkbox/indeterminate-usage" />
 
 ### Description
 
 Use the `description` prop to add helper text after the label.
 
-<Demo component={demos["checkbox/description-usage"]} />
+<Demo component="checkbox/description-usage" />
 
 ### Related
 
