--- a/apps/docs/app/(docs)/components/code/page.mdx
+++ b/apps/docs/app/(docs)/components/code/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Code
@@ -9,7 +9,7 @@ Display inline code.
 
 ### Usage
 
-<Demo component={demos["code/usage"]} />
+<Demo component="code/usage" />
 
 ## Props
 
