--- a/apps/docs/app/(docs)/components/data-table/page.mdx
+++ b/apps/docs/app/(docs)/components/data-table/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # DataTable
@@ -18,7 +18,7 @@ npm install @tanstack/react-table
 
 ### Usage
 
-<Demo component={demos["data-table/usage"]} />
+<Demo component="data-table/usage" />
 
 ## Props
 
