--- a/apps/docs/app/(docs)/components/date-input/page.mdx
+++ b/apps/docs/app/(docs)/components/date-input/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # DateInput
@@ -9,7 +9,7 @@ Input field with calendar that lets user enter dates.
 
 ### Usage
 
-<Demo component={demos["date-input/usage"]} />
+<Demo component="date-input/usage" />
 
 ## Props
 
