--- a/apps/docs/app/(docs)/components/flex/page.mdx
+++ b/apps/docs/app/(docs)/components/flex/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Flex
@@ -10,7 +10,7 @@ Use `Flex` component to stack items vertically or horizontally.
 
 ### Usage
 
-<Demo component={demos["flex/usage"]} />
+<Demo component="flex/usage" />
 
 ### Direction
 
@@ -18,23 +18,23 @@ Use `flexDirection` prop to control whether children are stacked vertically or h
 
 Use `flexDirection="row"` or `flexDirection="row-reverse"` to stack items horizontally:
 
-<Demo component={demos["flex/horizontal-usage"]} />
+<Demo component="flex/horizontal-usage" />
 
 Use `flexDirection="column"` or `flexDirection="column-reverse"` to stack items vertically:
 
-<Demo component={demos["flex/vertical-usage"]} />
+<Demo component="flex/vertical-usage" />
 
 ### Gap
 
 Use `gap` prop to control the gap between flex items.
 
-<Demo component={demos["flex/gap-usage"]} />
+<Demo component="flex/gap-usage" />
 
 ### Alignment
 
 Use `alignItems` and `justifyContent` prop to control the layout and alignment of flex items.
 
-<Demo component={demos["flex/alignment-usage"]} />
+<Demo component="flex/alignment-usage" />
 
 ### Related
 
