--- a/apps/docs/app/(docs)/components/heading/page.mdx
+++ b/apps/docs/app/(docs)/components/heading/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Heading
@@ -12,13 +12,13 @@ import { components, PropsTable } from "@/components/props-table";
 
 Use the `level` prop to control both the semantic tag and visual size.
 
-<Demo component={demos["heading/usage"]} />
+<Demo component="heading/usage" />
 
 ### Visual size
 
 Combine the `level` prop with `asChild` to set the visual size while manually controlling the semantic tag.
 
-<Demo component={demos["heading/size-usage"]} />
+<Demo component="heading/size-usage" />
 
 ### Related
 
