--- a/apps/docs/app/(docs)/components/kbd/page.mdx
+++ b/apps/docs/app/(docs)/components/kbd/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Kbd
@@ -9,19 +9,19 @@ Inline text representing keyboard input.
 
 ### Usage
 
-<Demo component={demos["kbd/usage"]} />
+<Demo component="kbd/usage" />
 
 ### Key codes
 
 Use the `keys` prop to display commonly used key codes.
 
-<Demo component={demos["kbd/keys-usage"]} />
+<Demo component="kbd/keys-usage" />
 
 ### Appearance
 
 Use the `variant` prop to select between the different appearances.
 
-<Demo component={demos["kbd/appearance-usage"]} />
+<Demo component="kbd/appearance-usage" />
 
 ## Props
 
