--- a/apps/docs/app/(docs)/components/link/page.mdx
+++ b/apps/docs/app/(docs)/components/link/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Link
@@ -9,31 +9,31 @@ Anchor element for creating hyperlinks.
 
 ### Usage
 
-<Demo component={demos["link/usage"]} />
+<Demo component="link/usage" />
 
 ### Appearance
 
 Use the `appearance` prop to select between the different link appearances.
 
-<Demo component={demos["link/appearance-usage"]} />
+<Demo component="link/appearance-usage" />
 
 ### Disabled links
 
 Set the `disabled` prop to `true` to style links to appear disabled and also prevent any interactions.
 
-<Demo component={demos["link/disabled-usage"]} />
+<Demo component="link/disabled-usage" />
 
 ### External links
 
 Set the `external` prop to `true` to add an icon and set the correct rel and target attributes.
 
-<Demo component={demos["link/external-usage"]} />
+<Demo component="link/external-usage" />
 
 ### Links as buttons
 
 Set `asChild` to `true` and wrap children in a `<button>` element to render links as buttons.
 
-<Demo component={demos["link/button-usage"]} />
+<Demo component="link/button-usage" />
 
 ## Props
 
