--- a/apps/docs/app/(docs)/components/modal-layer/page.mdx
+++ b/apps/docs/app/(docs)/components/modal-layer/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # ModalLayer
@@ -13,7 +13,7 @@ Dialog and popover components internally use focus managers to ensure focus trap
 
 All of our components automatically handle this focus management when being rendered inside dialogs/popovers - but third party portalled components need to be manually wrapped in the `ModalLayer` component.
 
-<Demo component={demos["modal-layer/usage"]} />
+<Demo component="modal-layer/usage" />
 
 ## Props
 
