--- a/apps/docs/app/(docs)/components/segmented-control/page.mdx
+++ b/apps/docs/app/(docs)/components/segmented-control/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # SegmentedControl
@@ -14,13 +14,13 @@ Use `SegmentedControl` and `SegmentedControlItem` components together to create 
 
 `SegmentedControlItem` extends the [Button](./button/) component.
 
-<Demo component={demos["segmented-control/usage"]} />
+<Demo component="segmented-control/usage" />
 
 ### Controlled
 
 Use the `value` and `defaultValue` props to toggle between controlled and uncontrolled usage. And combine it with `onValueChange` to listen for changes to the state.
 
-<Demo component={demos["segmented-control/controlled-usage"]} />
+<Demo component="segmented-control/controlled-usage" />
 
 ### Related
 
