--- a/apps/docs/app/(docs)/components/sidebar/page.mdx
+++ b/apps/docs/app/(docs)/components/sidebar/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Sidebar
@@ -9,7 +9,7 @@ Primary navigation menu for left side of the page that includes support for bran
 
 ### Usage
 
-<Demo component={demos["sidebar/usage"]} />
+<Demo component="sidebar/usage" />
 
 ### Anatomy
 
