--- a/apps/docs/app/(docs)/components/spinner/page.mdx
+++ b/apps/docs/app/(docs)/components/spinner/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Spinner
@@ -10,25 +10,25 @@ Used for indicating an unspecified wait time.
 
 ### Usage
 
-<Demo component={demos["spinner/usage"]} />
+<Demo component="spinner/usage" />
 
 ### Size
 
 Use the `size` prop to select between the different sizes.
 
-<Demo component={demos["spinner/size-usage"]} />
+<Demo component="spinner/size-usage" />
 
 ### Label
 
 Use `children` to show an optional label for the spinner.
 
-<Demo component={demos["spinner/label-usage"]} />
+<Demo component="spinner/label-usage" />
 
 ### Appearance
 
 Set the `appearance` prop to `inverse` when displaying spinner on dark background.
 
-<Demo component={demos["spinner/color-usage"]} />
+<Demo component="spinner/color-usage" />
 
 ### Related
 
