--- a/apps/docs/app/(docs)/components/switch/page.mdx
+++ b/apps/docs/app/(docs)/components/switch/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Switch
@@ -10,31 +10,31 @@ Control to allow toggling between checked and not checked state.
 
 ### Usage
 
-<Demo component={demos["switch/usage"]} />
+<Demo component="switch/usage" />
 
 ### Label
 
 The `children` prop is used as the label of the switch control.
 
-<Demo component={demos["switch/label-usage"]} />
+<Demo component="switch/label-usage" />
 
 ### Sizes
 
 Use the `size` prop to control the size of the switch control.
 
-<Demo component={demos["switch/size-usage"]} />
+<Demo component="switch/size-usage" />
 
 ### Disabled state
 
 Enable the `disabled` prop to toggle the disabled state of the input field.
 
-<Demo component={demos["switch/disabled-usage"]} />
+<Demo component="switch/disabled-usage" />
 
 ### Controlled
 
 Use the `checked` and `defaultChecked` props to toggle between controlled and uncontrolled usage. And combine it with `onCheckedChange` to listen for changes to the state.
 
-<Demo component={demos["switch/controlled-usage"]} />
+<Demo component="switch/controlled-usage" />
 
 ### Related
 
