--- a/apps/docs/app/(docs)/components/table/page.mdx
+++ b/apps/docs/app/(docs)/components/table/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Table
@@ -10,7 +10,7 @@ Display tabular data using rows and columns.
 
 ### Usage
 
-<Demo component={demos["table/usage"]} />
+<Demo component="table/usage" />
 
 ### Anatomy
 
