--- a/apps/docs/app/(docs)/styling/background-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/background-color/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { Scale } from "@/components/scale";
 
 # Background Color
@@ -11,4 +11,4 @@ Use `bg` prop to control the background color of an element.
 
 ### Usage
 
-<Demo component={demos["background-color/usage"]} />
+<Demo component="background-color/usage" />
