--- a/apps/docs/app/(docs)/styling/border-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-color/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { Scale } from "@/components/scale";
 
 # Border Color
@@ -11,4 +11,4 @@ Use `borderColor` prop to control the border color of an element.
 
 ### Usage
 
-<Demo component={demos["border-color/usage"]} />
+<Demo component="border-color/usage" />
