--- a/apps/docs/app/(docs)/styling/border-radius/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-radius/page.mdx
@@ -1,6 +1,6 @@
 import { Scale } from "@/components/scale";
 
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Border Radius
 
@@ -12,4 +12,4 @@ Use `rounded` prop to control the border radius of an element.
 
 ### Usage
 
-<Demo component={demos["border-radius/usage"]} />
+<Demo component="border-radius/usage" />
