--- a/apps/docs/app/(docs)/styling/border-width/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-width/page.mdx
@@ -1,6 +1,6 @@
 import { Scale } from "@/components/scale";
 
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Border Width
 
@@ -12,8 +12,8 @@ Use `border` prop to control the border width of an element.
 
 ### Usage
 
-<Demo component={demos["border-width/usage"]} />
+<Demo component="border-width/usage" />
 
 ### Single side
 
-<Demo component={demos["border-width/single-usage"]} />
+<Demo component="border-width/single-usage" />
