--- a/apps/docs/app/(docs)/styling/box-shadow/page.mdx
+++ b/apps/docs/app/(docs)/styling/box-shadow/page.mdx
@@ -1,6 +1,6 @@
 import { Scale } from "@/components/scale";
 
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Box Shadow
 
@@ -12,8 +12,8 @@ Use `shadow` prop to control the box shadow of an element.
 
 ### Usage
 
-<Demo component={demos["box-shadow/usage"]} />
+<Demo component="box-shadow/usage" />
 
 ### Removing the shadow
 
-<Demo component={demos["box-shadow/none-usage"]} />
+<Demo component="box-shadow/none-usage" />
