--- a/apps/docs/app/(docs)/styling/colors/page.mdx
+++ b/apps/docs/app/(docs)/styling/colors/page.mdx
@@ -1,5 +1,5 @@
 import { theme } from "@optiaxiom/react";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { Scale } from "@/components/scale";
 
 # Colors
@@ -12,11 +12,11 @@ You can also use the `--ax-colors-*` CSS variables directly in any CSS property.
 
 ### Using style props
 
-<Demo component={demos["styles/prop-usage"]} />
+<Demo component="styles/prop-usage" />
 
 ### Using CSS variables
 
-<Demo component={demos["styles/css-usage"]} />
+<Demo component="styles/css-usage" />
 
 ### Dark mode
 
