--- a/apps/docs/app/(docs)/styling/design-tokens/page.mdx
+++ b/apps/docs/app/(docs)/styling/design-tokens/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { theme } from "@optiaxiom/react";
 
 # Design Tokens
@@ -52,13 +52,13 @@ console.log(theme.zIndex.popover === "var(--ax-zIndex-popover)"); // true
 
 For all react components you can use the various style props to set the styles using tokens.
 
-<Demo component={demos["styles/prop-usage"]} />
+<Demo component="styles/prop-usage" />
 
 ### Consuming variables from CSS
 
 You can also directly use the CSS variable name in your `.css` files.
 
-<Demo component={demos["styles/css-usage"]} />
+<Demo component="styles/css-usage" />
 
 ### Consuming variables from JS
 
@@ -66,7 +66,7 @@ Axiom exports a `theme` contract that contains a map of all tokens to the corres
 
 You can use this `theme` object when implementing any CSS-in-JS solutions.
 
-<Demo component={demos["styles/js-usage"]} />
+<Demo component="styles/js-usage" />
 
 ## Reference
 
