--- a/apps/docs/app/(docs)/styling/font-family/page.mdx
+++ b/apps/docs/app/(docs)/styling/font-family/page.mdx
@@ -1,6 +1,6 @@
 import { Scale } from "@/components/scale";
 
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Font Family
 
@@ -12,4 +12,4 @@ Use `fontFamily` prop to control the font-family of an element.
 
 ### Usage
 
-<Demo component={demos["font/family-usage"]} />
+<Demo component="font/family-usage" />
