--- a/apps/docs/app/(docs)/styling/font-size/page.mdx
+++ b/apps/docs/app/(docs)/styling/font-size/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Font Size
 
@@ -11,4 +11,4 @@ Use `fontSize` prop to control the font-size of an element.
 
 ### Usage
 
-<Demo component={demos["font/size-usage"]} />
+<Demo component="font/size-usage" />
