--- a/apps/docs/app/(docs)/styling/gap/page.mdx
+++ b/apps/docs/app/(docs)/styling/gap/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Gap
 
@@ -13,4 +13,4 @@ import { Demo, demos } from "@/components/demo";
 
 ### Usage
 
-<Demo component={demos["gap/usage"]} />
+<Demo component="gap/usage" />
