--- a/apps/docs/app/(docs)/styling/height/page.mdx
+++ b/apps/docs/app/(docs)/styling/height/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Height
 
@@ -11,4 +11,4 @@ Use `h` prop to control the height of an element.
 
 ### Usage
 
-<Demo component={demos["height/usage"]} />
+<Demo component="height/usage" />
