--- a/apps/docs/app/(docs)/styling/margin/page.mdx
+++ b/apps/docs/app/(docs)/styling/margin/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Margin
 
@@ -13,12 +13,12 @@ import { Demo, demos } from "@/components/demo";
 
 Use the space scale to set the margin of elements.
 
-<Demo component={demos["margin/usage"]} />
+<Demo component="margin/usage" />
 
 ### Multiple sides
 
-<Demo component={demos["margin/multiple-usage"]} />
+<Demo component="margin/multiple-usage" />
 
 ### Single side
 
-<Demo component={demos["margin/single-usage"]} />
+<Demo component="margin/single-usage" />
