--- a/apps/docs/app/(docs)/styling/max-height/page.mdx
+++ b/apps/docs/app/(docs)/styling/max-height/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Max-Height
 
@@ -11,4 +11,4 @@ Use `maxH` prop to control the max-height of an element.
 
 ### Usage
 
-<Demo component={demos["max-height/usage"]} />
+<Demo component="max-height/usage" />
