--- a/apps/docs/app/(docs)/styling/max-width/page.mdx
+++ b/apps/docs/app/(docs)/styling/max-width/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Max-Width
 
@@ -11,4 +11,4 @@ Use `maxW` prop to control the max-width of an element.
 
 ### Usage
 
-<Demo component={demos["max-width/usage"]} />
+<Demo component="max-width/usage" />
