--- a/apps/docs/app/(docs)/styling/padding/page.mdx
+++ b/apps/docs/app/(docs)/styling/padding/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Padding
 
@@ -13,12 +13,12 @@ import { Demo, demos } from "@/components/demo";
 
 Use the space scale to set the padding of elements.
 
-<Demo component={demos["padding/usage"]} />
+<Demo component="padding/usage" />
 
 ### Multiple sides
 
-<Demo component={demos["padding/multiple-usage"]} />
+<Demo component="padding/multiple-usage" />
 
 ### Single side
 
-<Demo component={demos["padding/single-usage"]} />
+<Demo component="padding/single-usage" />
