--- a/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
+++ b/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
@@ -1,6 +1,6 @@
 import { tokens } from "@optiaxiom/react";
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Responsive Styles
 
@@ -42,5 +42,5 @@ export function App() {
 
 <Demo
   iframe="/iframe/responsive/"
-  component={demos["styles/responsive-complex-usage"]}
+  component="styles/responsive-complex-usage"
 />
