--- a/apps/docs/app/(docs)/styling/size/page.mdx
+++ b/apps/docs/app/(docs)/styling/size/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Size
 
@@ -11,12 +11,12 @@ Use `size` prop to control both the width and height of an element.
 
 ### Usage
 
-<Demo component={demos["size/usage"]} />
+<Demo component="size/usage" />
 
 ### Percentage
 
-<Demo component={demos["size/percentage-usage"]} />
+<Demo component="size/percentage-usage" />
 
 ### Reset
 
-<Demo component={demos["size/reset-usage"]} />
+<Demo component="size/reset-usage" />
