--- a/apps/docs/app/(docs)/styling/text-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/text-color/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { Scale } from "@/components/scale";
 
 # Text Color
@@ -11,4 +11,4 @@ Use `color` prop to control the text color of an element.
 
 ### Usage
 
-<Demo component={demos["color/usage"]} />
+<Demo component="color/usage" />
