--- a/apps/docs/app/(docs)/styling/transition-property/page.mdx
+++ b/apps/docs/app/(docs)/styling/transition-property/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { Scale } from "@/components/scale";
 
 # Transition Property
@@ -13,4 +13,4 @@ Use `transition` prop to control the transition-property of an element.
 
 Use `transition="colors"` to transition all color related properties.
 
-<Demo component={demos["transition/colors-usage"]} />
+<Demo component="transition/colors-usage" />
