--- a/apps/docs/app/(docs)/styling/width/page.mdx
+++ b/apps/docs/app/(docs)/styling/width/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Width
 
@@ -11,8 +11,8 @@ Use `w` prop to control the width of an element.
 
 ### Usage
 
-<Demo component={demos["width/usage"]} />
+<Demo component="width/usage" />
 
 ### Percentage
 
-<Demo component={demos["width/percentage-usage"]} />
+<Demo component="width/percentage-usage" />
