--- a/apps/docs/app/(docs)/styling/z-index/page.mdx
+++ b/apps/docs/app/(docs)/styling/z-index/page.mdx
@@ -1,5 +1,5 @@
 import { Scale } from "@/components/scale";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Z-Index
 
@@ -11,4 +11,4 @@ Use `z` prop to control the z-index of an element.
 
 ### Usage
 
-<Demo component={demos["z-index/usage"]} />
+<Demo component="z-index/usage" />
