--- a/apps/docs/app/(docs)/components/alert/page.mdx
+++ b/apps/docs/app/(docs)/components/alert/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
@@ -11,19 +11,19 @@ Keeps users informed of important and sometimes time-sensitive changes.
 
 ### Usage
 
-<Demo component={demos["alert/usage"]} />
+<Demo component="alert/usage" />
 
 ### Appearance
 
 Use the `intent` prop to select between the different alert types.
 
-<Demo component={demos["alert/appearance-usage"]} />
+<Demo component="alert/appearance-usage" />
 
 ### Dismissible
 
 Use the `onDismiss` prop to show a close button to the top right of the alert.
 
-<Demo component={demos["alert/close-usage"]} />
+<Demo component="alert/close-usage" />
 
 ### Related
 
