--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Combobox
@@ -10,7 +10,7 @@ Multi-purpose combobox widget to allow selection from a dynamic set of options.
 
 ### Usage
 
-<Demo component={demos["combobox/usage"]} />
+<Demo component="combobox/usage" />
 
 ### Anatomy
 
