--- a/apps/docs/app/(docs)/components/disclosure/page.mdx
+++ b/apps/docs/app/(docs)/components/disclosure/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Disclosure
@@ -11,7 +11,7 @@ An interactive component which expands/collapses a panel.
 
 Use the `open` and `defaultOpen` props to toggle between controlled and uncontrolled usage. And combine it with `onOpenChange` to listen for changes to the state.
 
-<Demo component={demos["disclosure/usage"]} />
+<Demo component="disclosure/usage" />
 
 ### Description
 
@@ -19,7 +19,7 @@ Use the `chevronPosition` prop on `DisclosureTrigger` to control which side the 
 
 <Demo
   meta="/chevronPosition={chevronPosition}/"
-  component={demos["disclosure/chevron-position-usage"]}
+  component="disclosure/chevron-position-usage"
 />
 
 ## Props
