--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # DropdownMenu
@@ -12,19 +12,19 @@ Display a dropdown menu.
 
 Use the `DropdownMenu`, `DropdownMenuTrigger`, and `DropdownMenuContent` components to build out menus.
 
-<Demo component={demos["dropdown-menu/usage"]} />
+<Demo component="dropdown-menu/usage" />
 
 ### Controlled
 
 Use the `open` and `defaultOpen` props to toggle between controlled and uncontrolled usage. And combine it with `onOpenChange` to listen for changes to the state.
 
-<Demo component={demos["dropdown-menu/controlled-usage"]} meta="{16,24-25}" />
+<Demo component="dropdown-menu/controlled-usage" meta="{16,24-25}" />
 
 ### Non modal usage
 
 By default scrolling and interactions with outside elements is disabled when menu is open. Set `modal` prop to `false` in order to render a non-modal dropdown.
 
-<Demo component={demos["dropdown-menu/modal-usage"]} meta="/modal={false}/" />
+<Demo component="dropdown-menu/modal-usage" meta="/modal={false}/" />
 
 ### Trigger
 
@@ -32,7 +32,7 @@ By default scrolling and interactions with outside elements is disabled when men
 
 By default we use the `Button` component for the menu trigger which accepts all of the existing button props.
 
-<Demo component={demos["dropdown-menu/trigger-usage"]} meta="{15-17}" />
+<Demo component="dropdown-menu/trigger-usage" meta="{15-17}" />
 
 #### Ellipsis trigger
 
@@ -41,10 +41,7 @@ We can also use `asChild` to render a completely different component. We provide
 - `AngleMenuButton` (default)
 - `EllipsisMenuButton`
 
-<Demo
-  component={demos["dropdown-menu/ellipsis-trigger-usage"]}
-  meta="{15-17}"
-/>
+<Demo component="dropdown-menu/ellipsis-trigger-usage" meta="{15-17}" />
 
 ### Content
 
@@ -53,7 +50,7 @@ We can also use `asChild` to render a completely different component. We provide
 Use the `align` and `side` props on `DropdownMenuContent` to change the default position of the dropdown.
 
 <Demo
-  component={demos["dropdown-menu/position-usage"]}
+  component="dropdown-menu/position-usage"
   meta="/align={align}/ /side={side}/"
 />
 
@@ -63,46 +60,37 @@ Use the `align` and `side` props on `DropdownMenuContent` to change the default 
 
 Use the `intent` prop to control the appearance of items.
 
-<Demo
-  meta='/intent="danger"/'
-  component={demos["dropdown-menu/appearance-usage"]}
-/>
+<Demo meta='/intent="danger"/' component="dropdown-menu/appearance-usage" />
 
 #### Description
 
 Use the `description` prop to add secondary text to items.
 
-<Demo
-  meta="/description/"
-  component={demos["dropdown-menu/description-usage"]}
-/>
+<Demo meta="/description/" component="dropdown-menu/description-usage" />
 
 #### Disabled items
 
 Use the `disabled` prop on menu items to disable them.
 
-<Demo meta="/disabled/" component={demos["dropdown-menu/disabled-usage"]} />
+<Demo meta="/disabled/" component="dropdown-menu/disabled-usage" />
 
 #### Selection
 
 Use the `onSelect` prop to handle selection of items.
 
-<Demo component={demos["dropdown-menu/select-usage"]} meta="{26,33}" />
+<Demo component="dropdown-menu/select-usage" meta="{26,33}" />
 
 #### Left and right addons
 
 Use the `icon`, `addonBefore`, and `addonAfter` props to add icons, text, or any other element to the start or end of the menu items.
 
-<Demo
-  meta="{20-24,25,32-36,37}"
-  component={demos["dropdown-menu/addon-usage"]}
-/>
+<Demo meta="{20-24,25,32-36,37}" component="dropdown-menu/addon-usage" />
 
 ### Label
 
 Use the `DropdownMenuLabel` component to render a read-only label.
 
-<Demo meta="{5,17}" component={demos["dropdown-menu/usage"]} />
+<Demo meta="{5,17}" component="dropdown-menu/usage" />
 
 ### Dialogs inside menus
 
@@ -110,7 +98,7 @@ Combine dropdown menus with dialog to show alerts when selecting an item.
 
 Make sure to enable `asChild` prop on `AlertDialogTrigger` and call `event.preventDefault()` in the item `onSelect` handler.
 
-<Demo component={demos["dropdown-menu/alert-dialog-usage"]} meta="{25,29}" />
+<Demo component="dropdown-menu/alert-dialog-usage" meta="{25,29}" />
 
 ### Related
 
