--- a/apps/docs/app/(docs)/components/field/page.mdx
+++ b/apps/docs/app/(docs)/components/field/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Field
@@ -11,13 +11,13 @@ Wrapper for inputs to provide context such as label/help/required etc.
 
 Wrap your actual input controls with `Field` to show additional context for the input.
 
-<Demo component={demos["field/usage"]} />
+<Demo component="field/usage" />
 
 ### Required
 
 Enable the `required` prop to display an asterisk for required inputs.
 
-<Demo component={demos["field/required-usage"]} />
+<Demo component="field/required-usage" />
 
 The `required` prop will be available to the input element via a `FieldContext`.
 
@@ -25,13 +25,13 @@ The `required` prop will be available to the input element via a `FieldContext`.
 
 Use the `description` prop to provide help text for the input.
 
-<Demo component={demos["field/description-usage"]} />
+<Demo component="field/description-usage" />
 
 ### Error
 
 Use the `error` prop to display validation or other errors for the input.
 
-<Demo component={demos["field/error-usage"]} />
+<Demo component="field/error-usage" />
 
 The `error` prop will be available as a boolean to the input element via a `FieldContext`.
 
@@ -39,7 +39,7 @@ The `error` prop will be available as a boolean to the input element via a `Fiel
 
 Use the `info` prop to display a help icon with additional context for the input.
 
-<Demo component={demos["field/info-usage"]} />
+<Demo component="field/info-usage" />
 
 ## Props
 
