--- a/apps/docs/app/(docs)/components/grid/page.mdx
+++ b/apps/docs/app/(docs)/components/grid/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Grid
@@ -12,19 +12,19 @@ Use `Grid` component to place items in a grid using equal width columns.
 
 Use `gridTemplateColumns` prop to create equally sized columns in a grid layout.
 
-<Demo component={demos["grid/usage"]} meta="/gridTemplateColumns/" />
+<Demo component="grid/usage" meta="/gridTemplateColumns/" />
 
 ### Gap
 
 Use `gap` prop to control the gap between grid items.
 
-<Demo component={demos["grid/gap-usage"]} />
+<Demo component="grid/gap-usage" />
 
 ### Spanning columns
 
 Use the `gridColumn` prop on children to make them span across multiple columns.
 
-<Demo meta="/gridColumn/" component={demos["grid/span-usage"]} />
+<Demo meta="/gridColumn/" component="grid/span-usage" />
 
 ### Related
 
