--- a/apps/docs/app/(docs)/components/indicator/page.mdx
+++ b/apps/docs/app/(docs)/components/indicator/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Indicator
@@ -9,28 +9,25 @@ Display a badge at the corner of another element.
 
 ### Usage
 
-<Demo component={demos["indicator/usage"]} />
+<Demo component="indicator/usage" />
 
 ### Content
 
 Use the `content` prop to set the content of the badge.
 
-<Demo component={demos["indicator/content-usage"]} />
+<Demo component="indicator/content-usage" />
 
 ### Appearance
 
 Use the `intent` and `variant` props to fine tune the appearance of the badge.
 
-<Demo component={demos["indicator/appearance-usage"]} />
+<Demo component="indicator/appearance-usage" />
 
 ### Hide indicator
 
 Use the `disabled` prop to hide the badge.
 
-<Demo
-  component={demos["indicator/disabled-usage"]}
-  meta="/disabled={disabled}/"
-/>
+<Demo component="indicator/disabled-usage" meta="/disabled={disabled}/" />
 
 ## Props
 
