--- a/apps/docs/app/(docs)/components/inline-input/page.mdx
+++ b/apps/docs/app/(docs)/components/inline-input/page.mdx
@@ -1,5 +1,5 @@
 import { Callout } from "nextra/components";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
@@ -13,13 +13,13 @@ Seamless textbox for capturing user input with completely customizable visual st
 
 The `InlineInput` component requires the `label` prop and is typically paired with another component to provide the visual styles.
 
-<Demo component={demos["inline-input/usage"]} />
+<Demo component="inline-input/usage" />
 
 ### Handling changes
 
 Use the `onValueChange` prop to listen for changes to the value.
 
-<Demo component={demos["inline-input/change-usage"]} />
+<Demo component="inline-input/change-usage" />
 
 ### Controlled
 
@@ -29,31 +29,31 @@ Use the `value` and `defaultValue` props to toggle between controlled and uncont
   Remove the text from the following input and press `Enter`:
 </Alert>
 
-<Demo component={demos["inline-input/controlled-usage"]} />
+<Demo component="inline-input/controlled-usage" />
 
 ### Read-only state
 
 Enable the `disabled` prop to display the read-only state of the input field.
 
-<Demo component={demos["inline-input/disabled-usage"]} />
+<Demo component="inline-input/disabled-usage" />
 
 ### Appearance
 
 The inline input field will inherit styles from the parent component.
 
-<Demo component={demos["inline-input/appearance-usage"]} />
+<Demo component="inline-input/appearance-usage" />
 
 ### Multiline
 
 Enable the `multiline` prop to allow multi-line text input.
 
-<Demo component={demos["inline-input/multiline-usage"]} />
+<Demo component="inline-input/multiline-usage" />
 
 ### Placeholder
 
 By default we re-use the `label` prop for empty placeholder - but this can be customized using the `placeholder` prop.
 
-<Demo component={demos["inline-input/placeholder-usage"]} />
+<Demo component="inline-input/placeholder-usage" />
 
 ## Props
 
