--- a/apps/docs/app/(docs)/components/input/page.mdx
+++ b/apps/docs/app/(docs)/components/input/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Input
@@ -10,31 +10,31 @@ Basic text field for capturing user input.
 
 ### Usage
 
-<Demo component={demos["input/usage"]} />
+<Demo component="input/usage" />
 
 ### Sizes
 
 Use the `size` prop to control the size of the input field.
 
-<Demo component={demos["input/size-usage"]} />
+<Demo component="input/size-usage" />
 
 ### Error state
 
 Enable the `error` prop to display the error state of the input field.
 
-<Demo component={demos["input/error-usage"]} />
+<Demo component="input/error-usage" />
 
 ### Disabled state
 
 Enable the `disabled` prop to toggle the disabled state of the input field.
 
-<Demo component={demos["input/disabled-usage"]} />
+<Demo component="input/disabled-usage" />
 
 ### Read-only state
 
 Enable the `readOnly` prop to display the read-only state of the input field.
 
-<Demo component={demos["input/readonly-usage"]} />
+<Demo component="input/readonly-usage" />
 
 ### Addons
 
@@ -42,13 +42,13 @@ Enable the `readOnly` prop to display the read-only state of the input field.
 
 Use the `addonBefore` and `addonAfter` prop to add icons, text, or any other element to the start or end of the input.
 
-<Demo component={demos["input/addon-usage"]} />
+<Demo component="input/addon-usage" />
 
 #### Handling addon clicks
 
 Use the `addonPointerEvents` prop to control whether clicking the addons focuses the input or not.
 
-<Demo component={demos["input/addon-pointer-usage"]} />
+<Demo component="input/addon-pointer-usage" />
 
 ### Related
 
