--- a/apps/docs/app/(docs)/components/pagination/page.mdx
+++ b/apps/docs/app/(docs)/components/pagination/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Pagination
@@ -10,13 +10,13 @@ Display active page and navigate between multiple pages.
 
 ### Usage
 
-<Demo component={demos["pagination/usage"]} />
+<Demo component="pagination/usage" />
 
 ### Controlled
 
 Use the `page` and `defaultPage` props to toggle between controlled and uncontrolled usage. And combine it with `onPageChange` to listen for changes to the state.
 
-<Demo component={demos["pagination/controlled-usage"]} />
+<Demo component="pagination/controlled-usage" />
 
 ### Related
 
