--- a/apps/docs/app/(docs)/components/popover/page.mdx
+++ b/apps/docs/app/(docs)/components/popover/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Popover
@@ -9,17 +9,17 @@ Display arbitrary rich content inside a non-modal dialog triggered by a button.
 
 ### Usage
 
-<Demo component={demos["popover/usage"]} />
+<Demo component="popover/usage" />
 
 ### Controlled
 
 Use the `open` and `defaultOpen` props to toggle between controlled and uncontrolled usage. And combine it with `onOpenChange` to listen for changes to the state.
 
-<Demo component={demos["popover/controlled-usage"]} />
+<Demo component="popover/controlled-usage" />
 
 ### Example
 
-<Demo component={demos["popover/example-usage"]} />
+<Demo component="popover/example-usage" />
 
 ### Customize trigger
 
@@ -27,7 +27,7 @@ By default we use the `Button` component for the dialog trigger which accepts al
 
 We can also completely change the trigger by using `asChild` and passing our own component.
 
-<Demo component={demos["popover/trigger-usage"]} />
+<Demo component="popover/trigger-usage" />
 
 ## Props
 
