--- a/apps/docs/app/(docs)/components/progress/page.mdx
+++ b/apps/docs/app/(docs)/components/progress/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Progress
@@ -10,7 +10,7 @@ Display feedback on status of task or length of a process.
 
 ### Usage
 
-<Demo component={demos["progress/usage"]} />
+<Demo component="progress/usage" />
 
 ### Related
 
