--- a/apps/docs/app/(docs)/components/search-input/page.mdx
+++ b/apps/docs/app/(docs)/components/search-input/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # SearchInput
@@ -12,19 +12,19 @@ Basic search input field with clear button.
 
 The `SearchInput` component extends the `Input` component with some additional addons.
 
-<Demo component={demos["search-input/usage"]} />
+<Demo component="search-input/usage" />
 
 ### Disabled state
 
 Enable the `disabled` prop to toggle the disabled state of the input field.
 
-<Demo component={demos["search-input/disabled-usage"]} />
+<Demo component="search-input/disabled-usage" />
 
 ### Controlled
 
 Use the `value` and `defaultValue` props to toggle between controlled and uncontrolled usage. And combine it with `onChange` to listen for changes to the input field.
 
-<Demo component={demos["search-input/controlled-usage"]} />
+<Demo component="search-input/controlled-usage" />
 
 ### Related
 
