--- a/apps/docs/app/(docs)/components/select/page.mdx
+++ b/apps/docs/app/(docs)/components/select/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Select
@@ -10,7 +10,7 @@ Single select combobox widget to allow selection from a fixed set of options.
 
 ### Usage
 
-<Demo component={demos["select/usage"]} />
+<Demo component="select/usage" />
 
 ### Anatomy
 
