--- a/apps/docs/app/(docs)/components/skeleton/page.mdx
+++ b/apps/docs/app/(docs)/components/skeleton/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Skeleton
@@ -10,23 +10,23 @@ Display placeholder content while data is loading.
 
 ### Usage
 
-<Demo component={demos["skeleton/usage"]} />
+<Demo component="skeleton/usage" />
 
 ### Children
 
 Use `children` to insert things such as icons or graphics.
 
-<Demo component={demos["skeleton/children-usage"]} />
+<Demo component="skeleton/children-usage" />
 
 ### Dimensions
 
 Skeleton is automatically sized according to the parent `font-size`/`line-height` styles so we can combine it with `Text` or `Heading` component to achieve correctly sized textual placeholders.
 
-<Demo component={demos["skeleton/dimension-usage"]} />
+<Demo component="skeleton/dimension-usage" />
 
 ### Example
 
-<Demo component={demos["skeleton/example-usage"]} />
+<Demo component="skeleton/example-usage" />
 
 ### Related
 
