--- a/apps/docs/app/(docs)/components/toast/page.mdx
+++ b/apps/docs/app/(docs)/components/toast/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 import { components, PropsTable } from "@/components/props-table";
 
 # Toast
@@ -12,25 +12,25 @@ Display a brief notification.
 
 Use `toaster.create()` to add toasts. The method takes two arguments `message` and `options`.
 
-<Demo component={demos["toast/usage"]} />
+<Demo component="toast/usage" />
 
 ### Appearance
 
 Use the `type` option in the second argument to select between the different toast types.
 
-<Demo component={demos["toast/appearance-usage"]} />
+<Demo component="toast/appearance-usage" />
 
 ### Action
 
 Use the `action` and `onAction` options to include a short action button associated with the toast.
 
-<Demo component={demos["toast/action-usage"]} />
+<Demo component="toast/action-usage" />
 
 ### Dismiss
 
 Use `toaster.remove()` to remove toasts. The `create()` method returns a unique ID for the toast which can then be passed to the `remove()` method.
 
-<Demo component={demos["toast/dismiss-usage"]} />
+<Demo component="toast/dismiss-usage" />
 
 ### Related
 
