--- a/apps/docs/app/(docs)/styling/animation/page.mdx
+++ b/apps/docs/app/(docs)/styling/animation/page.mdx
@@ -1,4 +1,4 @@
-import { Demo, demos } from "@/components/demo";
+import { Demo } from "@/components/demo";
 
 # Animation
 
@@ -8,4 +8,4 @@ Use `animation` prop to apply CSS animations to an element.
 
 ### Pulse
 
-<Demo meta='/animation="pulse"/' component={demos["animation/pulse-usage"]} />
+<Demo meta='/animation="pulse"/' component="animation/pulse-usage" />
